fixed the settings overlap

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -143,11 +143,11 @@ body{
   height:100%;
 }
 .sm-tabs{
-  position: absolute;
-  z-index: $z-8;
+  position: fixed;
+  z-index: $z-9;
   margin:0;
   padding:0;
-  width:100%;
+  width:inherit;
   list-style: none;
   background: lightgrey;/*move me to vari */
   text-align: center;
@@ -194,22 +194,6 @@ body{
   overflow: auto;
 }
 
-.toggle{
-  height: 100px;
-  width: 150px;
-  position: absolute;
-  margin-bottom: 60px;
-  bottom:10px;
-  right:0px;
-  .content{
-    display: none;
-  }
-  .sm-tabs li{
-    width: 100%;
-    clear:both;
-    float:right;
-  }
-}
 .short-view{
   position:relative;
   height: 180px;
@@ -234,23 +218,6 @@ body{
   background: $white;
 }
 
-.content{
-  position:relative;
-  height: 100%;
-  background-color: $white;
-  padding: 50px 10px 200px 10px;
-}
-
-.menu-toggle span{
-  position: absolute;
-  float: left;
-  margin-left: -46.2%;
-  background: lightgrey;
-  color: darkgrey;
-  padding: 2px;
-  border-radius: 2px;
-  border: 1px solid darkgrey;
-}
 .stuff-view{
   margin: auto;
   padding:0;
