--- a/app/assets/stylesheets/menu/my_stuff.scss
+++ b/app/assets/stylesheets/menu/my_stuff.scss
@@ -8,7 +8,6 @@
 }
 my-post{
   position:relative;
+  z-index: $z-6;
   overflow:visible;
-
-
 }
